1. 增加异常控制